# nonogram

./: README.md  distributions.py  dists.py  example.py  generalresponses.data  generalsamples.data  main.py  nanogram.py  printField.py  pyproject.toml  train.py
examples/: pharaoh.toml  piggy.toml  second.toml  template.toml
src/: board.py  constants.py  distributions.py  find_numbers.py  generator.py  main.py  nanogram.py  puzzle.py  solver.py  test.py
